--- a/projects/ng-aquila/src/overlay/overlay-container.component.scss
+++ b/projects/ng-aquila/src/overlay/overlay-container.component.scss
@@ -7,4 +7,9 @@
   &:focus {
     outline: none;
   }
+
+  @media screen and (-ms-high-contrast: active) {
+    border: 1px solid windowText;
+    background: window;
+  }
 }
